@@ -2074,6 +2074,9 @@ UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=34775;
 -- Super Strong Metal Plate (Quest: Super Strong Metal Plates! (Id: 11644))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=34786;
 
+-- Crafty's Stuff (Quest: Dirty, Stinkin' Snobolds! (Id: 11645))
+UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=34787;
+
 -- Tempest Mote (Quest: Motes of the Enraged (Id: 11649))
 UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=34800;
 
